// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entitiesMetaData creates all metaData info 1`] = `
Object {
  "agentStateMonitoring": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Channel",
      },
      Object {
        "active": true,
        "name": "Agent",
      },
      Object {
        "active": false,
        "name": "Groups",
      },
      Object {
        "active": false,
        "name": "Skills",
      },
      Object {
        "active": true,
        "name": "Direction",
      },
      Object {
        "active": true,
        "name": "Presence State",
      },
      Object {
        "active": false,
        "name": "Reason Code",
      },
      Object {
        "active": true,
        "name": "Time in Presence State",
      },
      Object {
        "active": false,
        "name": "Offered",
      },
      Object {
        "active": false,
        "name": "Accepted",
      },
      Object {
        "active": false,
        "name": "Rejected",
      },
      Object {
        "active": false,
        "name": "Accepted Rate",
      },
      Object {
        "active": false,
        "name": "Away Time",
      },
      Object {
        "active": false,
        "name": "Away Rate",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [],
    "dependentEntity": "",
    "entityName": "agentStateMonitoring",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Monitoring/Silent%20Monitoring/Silent-monitoring.htm?Highlight=silent%20monitoring",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Agent State Monitoring",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Agent State Monitorin",
    "updateFormDependencies": Array [],
  },
  "apiKeys": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
      Object {
        "active": true,
        "name": "Role",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "apiKeys",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20ApiKeys/Creating_ApiKeys.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Api Key Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Api Key",
    "updateFormDependencies": Array [],
  },
  "branding": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "branding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Brandin",
    "updateFormDependencies": Array [],
  },
  "businessHours": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
      Object {
        "active": true,
        "name": "Timezone",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "daysInitials": Array [
      "mon",
      "tue",
      "wed",
      "thu",
      "fri",
      "sat",
      "sun",
    ],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "businessHours",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Business%20Hours/Business_Hours.htm",
    "membersTableFields": Object {
      "exceptions": Array [
        Object {
          "label": "Date",
          "name": "date",
        },
        Object {
          "label": "Description",
          "name": "description",
        },
        Object {
          "label": "Start",
          "name": "startTime",
        },
        Object {
          "label": "End",
          "name": "endTime",
        },
      ],
    },
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Business Hours Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "exceptions",
    "title": "Business Hour",
    "updateFormDependencies": Array [],
  },
  "capacityRules": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "capacityRules",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Capacity Rules",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Capacity Rule",
    "updateFormDependencies": Array [],
  },
  "chatWidgets": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "chatWidgets",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Chat Widgets",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Chat Widget",
    "updateFormDependencies": Array [],
  },
  "dashboards": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "dashboards",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Dashboards",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Dashboard",
    "updateFormDependencies": Array [],
  },
  "dataAccessReports": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Report Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "users",
      "historicalReportFolders",
      "dashboards",
    ],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [
      Object {
        "id": "invitationStatus",
        "value": "enabled",
      },
      Object {
        "id": "status",
        "value": "accepted",
      },
    ],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "users",
    "entityName": "dataAccessReports",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Reporting/Access_Controlled_Reports/Create.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
      Object {
        "filterOptions": Array [
          "accepted",
          "pending",
          "invited",
          "disabled",
        ],
        "label": "Tenant Status",
        "name": "status",
        "type": "select",
      },
      Object {
        "filterOptions": Array [
          "pending",
          "invited",
          "expired",
          "enabled",
          "disabled",
          "sso-only",
        ],
        "label": "Platform Status",
        "name": "invitationStatus",
        "type": "select",
      },
    ],
    "pageTitle": "Access Controlled Reports",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
      Object {
        "filterOptions": Array [
          "accepted",
          "pending",
          "invited",
          "disabled",
        ],
        "label": "Tenant Status",
        "name": "status",
        "type": "select",
      },
      Object {
        "filterOptions": Array [
          "pending",
          "invited",
          "expired",
          "enabled",
          "disabled",
          "sso-only",
        ],
        "label": "Platform Status",
        "name": "invitationStatus",
        "type": "select",
      },
    ],
    "standardDashboards": Array [
      Object {
        "label": "Agent Details Table",
        "value": "8e7c8f83-4ed4-4ab9-942e-dbc66bdb016b",
      },
      Object {
        "label": "Agent State Table",
        "value": "b7486897-337d-4e1b-a3c9-1353ce6a4738",
      },
      Object {
        "label": "Interactions Completed Table",
        "value": "e19680cb-bee2-422b-961d-09a5479ec466",
      },
      Object {
        "label": "Interactions Dashboard",
        "value": "26a076ea-7dd7-4a61-bbdf-f2734a7a3b28",
      },
      Object {
        "label": "Interactions In Conversation Table",
        "value": "5bceb39e-a4f9-41f1-b56f-8ecf0daf2844",
      },
      Object {
        "label": "Interactions In IVR Table",
        "value": "bed51612-8168-4488-99df-2100d66f8095",
      },
      Object {
        "label": "Interactions In Queue Table",
        "value": "b00de9cc-645e-48c1-9248-2270224fc054",
      },
      Object {
        "label": "Overview Dashboard",
        "value": "1a861841-628b-4e4b-892c-5fbb178dfd3a",
      },
      Object {
        "label": "Queues Dashboard",
        "value": "5f08bfde-3a79-4aa3-8586-42a1a03ffa90",
      },
      Object {
        "label": "Queue Details Table",
        "value": "1c6a29a9-6020-4543-82f8-490728e53876",
      },
      Object {
        "label": "Resources Dashboard",
        "value": "0ad70ddc-d3d4-458e-8019-20fc46122a52",
      },
    ],
    "subEntityName": "",
    "title": "Access Controlled Report",
    "updateFormDependencies": Array [
      "users",
      "historicalReportFolders",
      "dashboards",
      "roles",
      "permissions",
    ],
  },
  "dispatchMappings": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Value",
      },
      Object {
        "active": true,
        "name": "Interaction Field",
      },
      Object {
        "active": true,
        "name": "Channel Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
      Object {
        "active": true,
        "name": "Flow",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "flows",
      "integrations",
    ],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "dispatchMappings",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Flows/Dispatch_mapping.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Dispatch Mappings Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Dispatch Mapping",
    "updateFormDependencies": Array [
      "flows",
      "integrations",
    ],
  },
  "dispositions": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "External Id",
      },
      Object {
        "active": true,
        "name": "Shared",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "dispositions",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Dispositions/Creating_Dispositions.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Dispositions Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Disposition",
    "updateFormDependencies": Array [],
  },
  "emailTemplates": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "emailTemplates",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Email_Templates/Updating_Email_Templates.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "User Management Emails",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Email Template",
    "updateFormDependencies": Array [],
  },
  "flowDebugger": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "flowDebugger",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Flow Debug Logs",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Flow Debugge",
    "updateFormDependencies": Array [],
  },
  "flows": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Active Flow",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "drafts",
    "entityName": "flows",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Flows/Flow_overview.htm",
    "membersTableFields": Object {
      "drafts": Array [
        Object {
          "label": "Name",
          "name": "name",
        },
        Object {
          "format": "datetime",
          "label": "Created On",
          "name": "created",
        },
      ],
      "versions": Array [
        Object {
          "customSortMethod": [Function],
          "customWidth": 35,
          "label": "Version",
          "name": "numericOrderVersion",
        },
        Object {
          "label": "Name",
          "name": "name",
        },
        Object {
          "format": "datetime",
          "label": "Created On",
          "name": "created",
        },
      ],
    },
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Flow Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Flow",
    "updateFormDependencies": Array [
      "users",
    ],
  },
  "groups": EntityMetaData {
    "associations": Object {
      "outboundIdentifierLists": Array [
        "groups",
        "outboundIdentifierLists",
      ],
      "reasonLists": Array [
        "groups",
        "reasonLists",
      ],
      "users": Array [
        "groups",
        "users",
      ],
    },
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Object {
      "outboundIdentifierLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "reasonLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "users": Array [
        Object {
          "id": "status",
          "value": "accepted",
        },
        Object {
          "id": "invitationStatus",
          "value": "enabled",
        },
      ],
    },
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "users",
    "entityName": "groups",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Creating_Groups.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "outboundIdentifiersFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Group Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "subEntityName": "",
    "title": "Group",
    "updateFormDependencies": Array [
      "users",
    ],
  },
  "historicalReportFolders": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "historicalReportFolders",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Historical Report Folders",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Historical Report Folder",
    "updateFormDependencies": Array [],
  },
  "identityProviders": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "identityProviders",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Identity Providers",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Identity Provider",
    "updateFormDependencies": Array [],
  },
  "integrations": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "integrations",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Integrations",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Integration",
    "updateFormDependencies": Array [],
  },
  "interactionMonitoring": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "InteractionId",
      },
      Object {
        "active": true,
        "name": "Agent",
      },
      Object {
        "active": true,
        "name": "CustomerId",
      },
      Object {
        "active": true,
        "name": "ContactPoint",
      },
      Object {
        "active": true,
        "name": "Flow",
      },
      Object {
        "active": true,
        "name": "Channel",
      },
      Object {
        "active": true,
        "name": "Direction",
      },
      Object {
        "active": false,
        "name": "Presence State",
      },
      Object {
        "active": false,
        "name": "Start Date",
      },
      Object {
        "active": true,
        "name": "StartTime",
      },
      Object {
        "active": true,
        "name": "ElapsedTime",
      },
      Object {
        "active": true,
        "name": "Monitoring",
      },
      Object {
        "active": false,
        "name": "Groups",
      },
      Object {
        "active": false,
        "name": "Skills",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [],
    "dependentEntity": "",
    "entityName": "interactionMonitoring",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Interaction Monitoring",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Interaction Monitorin",
    "updateFormDependencies": Array [],
  },
  "listTypes": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "listTypes",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "List Types",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "List Type",
    "updateFormDependencies": Array [],
  },
  "lists": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "List Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "listTypes",
    ],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "lists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Lists/Lists.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "listItems",
    "title": "List",
    "updateFormDependencies": Array [],
  },
  "logi": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "logi",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "New Historical",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Log",
    "updateFormDependencies": Array [],
  },
  "messageTemplates": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Type",
      },
      Object {
        "active": true,
        "name": "Channels",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "messageTemplate",
    "entityName": "messageTemplates",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Messaging_Templates/Creating_Messaging_Templates.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Message Templates",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Message Template",
    "updateFormDependencies": Array [],
  },
  "outboundIdentifierLists": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "outboundIdentifiers",
    "entityName": "outboundIdentifierLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Outbound-Identifiers/Create-List.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Value",
        "name": "value",
      },
      Object {
        "label": "Channel Type",
        "name": "channelType",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "pageTitle": "Outbound Identifier Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Value",
        "name": "value",
      },
      Object {
        "label": "Channel Type",
        "name": "channelType",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "subEntityName": "",
    "title": "Outbound Identifier List",
    "updateFormDependencies": Array [
      "outboundIdentifiers",
    ],
  },
  "outboundIdentifiers": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Value",
      },
      Object {
        "active": true,
        "name": "channelType",
      },
      Object {
        "active": false,
        "name": "flowId",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "flows",
    ],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "outboundIdentifiers",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Outbound-Identifiers/Create-Outbound-Identifiers.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Outbound Identifiers",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Outbound Identifier",
    "updateFormDependencies": Array [
      "flows",
    ],
  },
  "permissions": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "permissions",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Permissions",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Permission",
    "updateFormDependencies": Array [],
  },
  "platformRoles": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "platformRoles",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Platform Roles",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Platform Role",
    "updateFormDependencies": Array [],
  },
  "protectedBranding": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "protectedBranding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Protected Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Protected Brandin",
    "updateFormDependencies": Array [],
  },
  "queues": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Active Queue",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "queues",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Flows/Create_queue.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Queue Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Queue",
    "updateFormDependencies": Array [],
  },
  "reasonLists": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "External Id",
      },
      Object {
        "active": true,
        "name": "Shared",
      },
      Object {
        "active": true,
        "name": "Is Default",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "reasons",
    "entityName": "reasonLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Presence%20Reasons/Creating_Presence_Reason_Lists.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Presence Reason List Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Presence Reason List",
    "updateFormDependencies": Array [],
  },
  "reasons": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "External Id",
      },
      Object {
        "active": true,
        "name": "Shared",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "reasons",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Presence%20Reasons/Creating_Reasons.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Presence Reasons",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Presence Reason",
    "updateFormDependencies": Array [],
  },
  "roles": EntityMetaData {
    "betaFeature": true,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Permissions",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "permissions",
    "entityName": "roles",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Adding_roles.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Role Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Role",
    "updateFormDependencies": Array [
      "permissions",
      "platformRoles",
    ],
  },
  "skills": EntityMetaData {
    "associations": Object {
      "outboundIdentifierLists": Array [
        "skills",
        "outboundIdentifierLists",
      ],
      "users": Array [
        "users",
        "skills",
      ],
    },
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Has Proficiency",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Object {
      "outboundIdentifierLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "users": Array [
        Object {
          "id": "status",
          "value": "accepted",
        },
        Object {
          "id": "invitationStatus",
          "value": "enabled",
        },
      ],
    },
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "users",
    "entityName": "skills",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Creating_Skills.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "pageTitle": "Skill Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "subEntityName": "",
    "title": "Skill",
    "updateFormDependencies": Array [
      "users",
    ],
  },
  "slas": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Active Sla",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "versions",
    "entityName": "slas",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Statistics_Management/About_Statistics_Management.htm",
    "membersTableFields": Object {
      "versions": Array [
        Object {
          "customSortMethod": [Function],
          "customWidth": 35,
          "label": "Version",
          "name": "numericOrderVersion",
        },
        Object {
          "label": "Name",
          "name": "versionName",
        },
        Object {
          "label": "Description",
          "name": "description",
        },
        Object {
          "format": "datetime",
          "label": "Created On",
          "name": "created",
        },
      ],
    },
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Statistics Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "SLA",
    "updateFormDependencies": Array [],
  },
  "standardDashboards": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "standardDashboards",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Standard Dashboards",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Standard Dashboard",
    "updateFormDependencies": Array [],
  },
  "tenants": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [],
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "tenants",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Tenants",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Tenant",
    "updateFormDependencies": Array [],
  },
  "transferLists": EntityMetaData {
    "betaFeature": false,
    "bulkEditsAvailable": false,
    "bulkFormDependencies": Array [],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "defaultAssociationFilters": Array [],
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "queues",
    "entityName": "transferLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Transfer_Lists/Creating_Transfer_Lists.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Transfer Lists Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Transfer List",
    "updateFormDependencies": Array [],
  },
  "users": EntityMetaData {
    "associations": Object {
      "groups": Array [
        "groups",
        "users",
      ],
      "messageTemplates": Array [
        "users",
        "messageTemplates",
      ],
      "outboundIdentifierLists": Array [
        "users",
        "outboundIdentifierLists",
      ],
      "reasonLists": Array [
        "users",
        "reasonLists",
      ],
      "skills": Array [
        "users",
        "skills",
      ],
      "transferLists": Array [
        "users",
        "transferLists",
      ],
    },
    "betaFeature": true,
    "bulkEditsAvailable": true,
    "bulkFormDependencies": Array [
      "identityProviders",
      "groups",
      "skills",
      "platformRoles",
    ],
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Email",
      },
      Object {
        "active": true,
        "name": "External Id",
      },
      Object {
        "active": true,
        "name": "Role",
      },
      Object {
        "active": true,
        "name": "Presence",
      },
      Object {
        "active": true,
        "name": "Platform Status",
      },
      Object {
        "active": true,
        "name": "Tenant Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "roles",
      "platformRoles",
      "identityProviders",
    ],
    "defaultAssociationFilters": Object {
      "groups": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "messageTemplates": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "outboundIdentifierLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "reasonLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "skills": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "transferLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
    },
    "defaultDependentEntityFilters": Array [],
    "defaultFilters": Array [
      Object {
        "id": "status",
        "value": "accepted",
      },
      Object {
        "id": "invitationStatus",
        "value": "all non-disabled",
      },
    ],
    "defaultSorted": Array [
      Object {
        "alpha": true,
        "id": "name",
      },
    ],
    "dependentEntity": "",
    "entityName": "users",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Adding_users.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
      Object {
        "filterOptions": Array [
          "accepted",
          "pending",
          "invited",
          "disabled",
        ],
        "label": "Tenant Status",
        "name": "status",
        "type": "select",
      },
      Object {
        "filterOptions": Array [
          "pending",
          "invited",
          "expired",
          "enabled",
          "disabled",
          "sso-only",
        ],
        "label": "Platform Status",
        "name": "invitationStatus",
        "type": "select",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "User Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "User",
    "updateFormDependencies": Array [
      "roles",
      "platformRoles",
      "identityProviders",
      "capacityRules",
    ],
  },
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntity",
  "crudAction": "read",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntity",
  "crudAction": "create",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntity",
  "crudAction": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntit",
  "crudAction": "read",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntit",
  "crudAction": "create",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntit",
  "crudAction": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 1`] = `
Object {
  "command": "get",
  "crudAction": "read",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 2`] = `
Object {
  "command": "create",
  "crudAction": "create",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 3`] = `
Object {
  "command": "update",
  "crudAction": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 1`] = `
Object {
  "command": "getListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 2`] = `
Object {
  "command": "createListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in update as apiMethod 1`] = `
Object {
  "command": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;
